small codacy